fix: Replaced team member image with a circular cropped ones

--- a/src/app/modules/about-us/about-us.component.scss
+++ b/src/app/modules/about-us/about-us.component.scss
@@ -331,12 +331,14 @@
           }
         }
 
+        .member-description {
+          max-width: 200px;
+        }
+
         img {
           height: 144px;
           aspect-ratio: 1;
           margin-bottom: 16px;
-          border-radius: 100%;
-          object-fit: cover;
           
           @media screen and (min-width: 470px) {
             height: 200px;
